--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         
         <div class="right-side">
-            <img src="./public/images/heroproduct1.png" 
+            <img src="/kiis-investor-pitch/public/images/heroproduct1.png" 
                  alt="KiiS Dental Implant" 
                  class="implant-image"
                  id="main-image">
@@ -103,7 +103,7 @@
             <div id="placeholder" class="placeholder">
                 <div class="placeholder-icon">🦷</div>
                 <div class="placeholder-text">KiiS Implant Image</div>
-                <div class="placeholder-path">./public/images/heroproduct1.png</div>
+                <div class="placeholder-path">/kiis-investor-pitch/public/images/heroproduct1.png</div>
             </div>
         </div>
     </div>
