--- a/index.html
+++ b/index.html
@@ -6,80 +6,122 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #0f1629 0%, #1e3a8a 100%);
+            font-family: 'Arial', sans-serif;
+            background: radial-gradient(ellipse at center, #1e40af 0%, #0f172a 70%, #000000 100%);
             color: white;
             height: 100vh;
             display: flex;
             align-items: center;
-            padding: 50px;
+            padding: 0 80px;
             box-sizing: border-box;
+            overflow: hidden;
         }
         .container {
             display: flex;
             align-items: center;
+            justify-content: space-between;
             width: 100%;
-            height: 100%;
+            max-width: 1400px;
+            margin: 0 auto;
         }
         .left-side {
             flex: 1;
-            padding-right: 50px;
+            padding-right: 60px;
+            max-width: 650px;
         }
         .right-side {
             flex: 1;
             text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .logo {
-            font-size: 80px;
+            font-size: 120px;
             font-weight: bold;
             color: #ffd700;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
+            text-shadow: 0 0 30px rgba(255, 215, 0, 0.5);
+            line-height: 1;
         }
         .subtitle {
-            font-size: 24px;
+            font-size: 32px;
             color: #e0e7ff;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            font-weight: 300;
         }
         .company {
-            font-size: 20px;
+            font-size: 24px;
             color: #e0e7ff;
-            margin-bottom: 40px;
+            margin-bottom: 60px;
+            font-weight: 300;
         }
         .tagline {
-            font-size: 36px;
+            font-size: 42px;
             font-style: italic;
-            line-height: 1.4;
+            line-height: 1.3;
             max-width: 600px;
+            font-weight: 300;
         }
         .implant-image {
-            max-width: 400px;
+            max-width: 500px;
+            width: 100%;
             height: auto;
-            border-radius: 10px;
+            filter: drop-shadow(0 0 40px rgba(59, 130, 246, 0.7)) brightness(1.1) contrast(1.2);
+            border-radius: 20px;
         }
         .placeholder {
-            width: 400px;
-            height: 500px;
+            width: 500px;
+            height: 600px;
             background: rgba(59, 130, 246, 0.3);
-            border-radius: 10px;
+            border-radius: 20px;
             display: none;
             align-items: center;
             justify-content: center;
             flex-direction: column;
-            margin: 0 auto;
             border: 2px dashed rgba(255, 255, 255, 0.3);
         }
         .placeholder-icon {
-            font-size: 60px;
-            margin-bottom: 20px;
+            font-size: 80px;
+            margin-bottom: 30px;
         }
         .placeholder-text {
-            font-size: 18px;
-            margin-bottom: 10px;
+            font-size: 24px;
+            margin-bottom: 15px;
         }
         .placeholder-path {
-            font-size: 14px; 
+            font-size: 16px; 
             opacity: 0.7;
             font-family: monospace;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 1200px) {
+            .container {
+                flex-direction: column;
+                text-align: center;
+                padding: 40px 0;
+            }
+            .left-side {
+                padding-right: 0;
+                margin-bottom: 40px;
+                max-width: 100%;
+            }
+            .logo {
+                font-size: 80px;
+            }
+            .subtitle {
+                font-size: 24px;
+            }
+            .company {
+                font-size: 18px;
+            }
+            .tagline {
+                font-size: 28px;
+            }
+            .implant-image {
+                max-width: 350px;
+            }
         }
     </style>
 </head>
