--- a/slide2.html
+++ b/slide2.html
@@ -394,8 +394,8 @@
     
     <!-- Navigation -->
     <div class="navigation">
-        <a href="index.html" class="nav-btn">← 커버</a>
-        <a href="slide3.html" class="nav-btn">3가지 장벽 →</a>
+        <a href="index.html" class="nav-btn">← back</a>
+        <a href="slide3.html" class="nav-btn">next →</a>
     </div>
     
     <script>
