--- a/slide4.html
+++ b/slide4.html
@@ -313,6 +313,12 @@
                             <span class="clickable-text" onclick="showSource('denovo')">*De Novo Pathway</span> for Injectable Platform (Phase 2 Expansion)
                         </li>
                     </ul>
+                    <div style="margin-top: 20px; text-align: center;">
+                        <img src="/kiis-investor-pitch/public/images/kiis-product-innovation-hallowchannel.jpg" 
+                             alt="KiiS Hollow Channel Innovation" 
+                             style="max-width: 200px; height: auto; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.3); border: 2px solid rgba(255,215,0,0.3);"
+                             onerror="this.style.display='none';">
+                    </div>
                 </div>
             </div>
         </div>
