--- a/slide9.html
+++ b/slide9.html
@@ -686,7 +686,7 @@
             <div class="charts-section">
                 <div class="chart-container" onclick="showSource('brandmarket')">
                     <div class="chart-title">Brand Market Analysis</div>
-                    <img src="./images/manufacturer-market-share.jpg" 
+                    <img src="/kiis-investor-pitch/public/images/manufacturer-market-share.jpg" 
                          alt="Manufacturer Market Share Analysis" 
                          class="chart-image"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
@@ -698,7 +698,7 @@
                 
                 <div class="chart-container" onclick="showSource('positioning')">
                     <div class="chart-title">Market Positioning Map</div>
-                    <img src="./images/market-positioning-chart.jpg" 
+                    <img src="/kiis-investor-pitch/public/images/market-positioning-chart.jpg" 
                          alt="Market Positioning Chart" 
                          class="chart-image"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
