--- a/slide10.html
+++ b/slide10.html
@@ -479,7 +479,7 @@
     <!-- 네비게이션 -->
     <div class="navigation" id="navigation">
         <a href="slide9.html" class="nav-btn prev">Back</a>
-        <a href="endslide.html" class="nav-btn next">Contact Us</a>
+        <a href="slide11.html" class="nav-btn next">Next</a>
     </div>
     
     <script>
@@ -580,7 +580,7 @@
                     if (deltaX > 0) {
                         window.location.href = 'slide9.html';
                     } else {
-                        window.location.href = 'endslide.html';
+                        window.location.href = 'slide11.html';
                     }
                 }
             });
@@ -623,7 +623,7 @@
                 case 'ArrowDown':
                 case ' ':
                     e.preventDefault();
-                    window.location.href = 'endslide.html';
+                    window.location.href = 'slide11.html';
                     break;
                 case 'Escape':
                     navigation.classList.remove('visible');
