--- a/slide11.html
+++ b/slide11.html
@@ -315,26 +315,22 @@
             transition: all 0.3s ease;
         }
 
-        .source-close:hover {
-            color: #ef4444;
-            transform: scale(1.3);
-        }
-            background: rgba(255, 193, 7, 0.2);
-            border: 1px solid #FFD700;
-            color: #FFD700;
+        .info-btn {
+            background: rgba(255, 215, 0, 0.2);
+            border: 1px solid #ffd700;
+            color: #ffd700;
             padding: 5px 12px;
             border-radius: 15px;
             cursor: pointer;
-            font-size: 0.8em;
+            font-size: 14px;
             margin-left: 10px;
             transition: all 0.3s ease;
         }
 
         .info-btn:hover {
-            background: rgba(255, 193, 7, 0.3);
+            background: rgba(255, 215, 0, 0.3);
             transform: scale(1.05);
         }
-
         .popup-overlay {
             display: none;
             position: fixed;
@@ -357,7 +353,7 @@
             border-radius: 20px;
             max-width: 700px;
             width: 90%;
-            border: 2px solid #FFD700;
+            border: 2px solid #ffd700;
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
         }
 
@@ -375,7 +371,7 @@
             padding: 20px;
             background: rgba(255, 255, 255, 0.1);
             border-radius: 10px;
-            border-left: 4px solid #4CAF50;
+            border-left: 4px solid #10b981;
         }
 
         .popup-section h4 {
@@ -406,8 +402,9 @@
             color: #ef4444;
             transform: scale(1.2);
         }
-            background: rgba(255, 193, 7, 0.1);
-            border: 2px solid #FFD700;
+        .competitive-advantage {
+            background: rgba(255, 215, 0, 0.1);
+            border: 2px solid #ffd700;
             border-radius: 15px;
             padding: 25px;
             margin-top: 30px;
