--- a/slide12.html
+++ b/slide12.html
@@ -51,6 +51,7 @@
             grid-template-columns: 1fr 1fr;
             gap: 40px;
             margin-bottom: 30px;
+            align-items: center;
         }
 
         .left-section {
@@ -151,6 +152,9 @@
 
         .right-section {
             position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .website-showcase {
@@ -160,6 +164,8 @@
             backdrop-filter: blur(10px);
             border: 2px solid #ffd700;
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+            width: 100%;
+            max-width: 100%;
         }
 
         .website-preview {
