--- a/slide16.html
+++ b/slide16.html
@@ -450,30 +450,30 @@
             <div class="stage-badge">Early Stage • Pre-Revenue Entry</div>
         </div>
 
-        <!-- Market Context Section -->
+        <!-- Ready to Scale Section -->
         <div class="market-context">
-            <h3>🎯 Conservative Target in Proven Market</h3>
+            <h3>🚀 Ready to Scale: From Technology to Market Leader</h3>
             <div class="market-stats">
                 <div class="market-stat">
-                    <div class="market-stat-number">$1.5B</div>
-                    <div class="market-stat-label">US Dental Market (2024)</div>
+                    <div class="market-stat-number">✅</div>
+                    <div class="market-stat-label">FDA Pathway Cleared<br>(510K Pre-submission)</div>
                 </div>
                 <div class="market-stat">
-                    <div class="market-stat-number">$25B</div>
-                    <div class="market-stat-label">US Orthopedic Market</div>
+                    <div class="market-stat-number">✅</div>
+                    <div class="market-stat-label">Team Ready<br>(Full-time CEO + Advisors)</div>
                 </div>
                 <div class="market-stat">
-                    <div class="market-stat-number">0.5%</div>
-                    <div class="market-stat-label">Target Share (Year 4)</div>
+                    <div class="market-stat-number">✅</div>
+                    <div class="market-stat-label">Manufacturing Ready<br>(Korean OEM Partners)</div>
                 </div>
                 <div class="market-stat">
-                    <div class="market-stat-number">7%</div>
-                    <div class="market-stat-label">Implant Direct Benchmark</div>
+                    <div class="market-stat-number">✅</div>
+                    <div class="market-stat-label">Go-to-Market Strategy<br>(Digital-First Sales)</div>
                 </div>
             </div>
             <div class="market-insight">
                 <div class="market-insight-text">
-                    <strong>Platform Expansion Opportunity:</strong> Same technology scales from $1.5B dental to $25B orthopedic market (17x multiplier)
+                    <strong>Series A Readiness:</strong> Technology de-risked, market validated, regulatory path clear—ready for commercial execution
                 </div>
             </div>
         </div>
@@ -505,22 +505,22 @@
             </div>
 
             <div class="investment-highlights">
-                <h3 class="highlights-title">Why Invest Now?</h3>
+                <h3 class="highlights-title">Series A Value Drivers</h3>
                 <div class="highlight-item">
-                    <div class="highlight-title">🚀 Pre-Revenue Entry</div>
-                    <div class="highlight-desc">Last chance before commercialization drives 10x valuation increase</div>
+                    <div class="highlight-title">📈 Massive Market Opportunity</div>
+                    <div class="highlight-desc">$1.5B dental expanding to $25B orthopedic market through platform technology</div>
                 </div>
                 <div class="highlight-item">
-                    <div class="highlight-title">✅ De-Risked Technology</div>
-                    <div class="highlight-desc">FDA pre-submission clearance removes regulatory uncertainty</div>
+                    <div class="highlight-title">⚡ Execution Ready</div>
+                    <div class="highlight-desc">Technology proven, FDA cleared, manufacturing partnerships identified</div>
                 </div>
                 <div class="highlight-item">
-                    <div class="highlight-title">📈 Platform Scalability</div>
-                    <div class="highlight-desc">Dental → Orthopedic expansion multiplies TAM by 17x</div>
+                    <div class="highlight-title">🎯 Optimal Entry Timing</div>
+                    <div class="highlight-desc">Pre-revenue valuation before commercial success drives 10x+ growth</div>
                 </div>
                 <div class="highlight-item">
-                    <div class="highlight-title">💎 Proven Success Model</div>
-                    <div class="highlight-desc">Implant Direct: <span class="benchmark-highlight">$225M valuation in 4 years</span> with breakthrough technology</div>
+                    <div class="highlight-title">💎 Proven Playbook</div>
+                    <div class="highlight-desc">Following Implant Direct model: <span class="benchmark-highlight">$225M exit in 4 years</span></div>
                 </div>
             </div>
         </div>
