--- a/slide2.html
+++ b/slide2.html
@@ -1161,7 +1161,7 @@
                         <div class="timing-plus">+</div>
                         <div class="timing-item">
                             <span class="timing-icon">💡</span>
-                            <span class="timing-text">Technology Breakthrough</span>
+                            <span class="timing-text">Post-COVID Pent-Up Demand</span>
                         </div>
                         <div class="timing-equals">=</div>
                         <div class="timing-result">Perfect Storm for Growth</div>
