--- a/slide5.html
+++ b/slide5.html
@@ -567,6 +567,11 @@
             <!-- 과학적 증거 이미지 섹션 -->
             <div class="image-section" id="imageSection">
                 <div class="image-container">
+                    <img src="/kiis-investor-pitch/public/images/micro-ct-bone-growth.jpg" 
+                         alt="6-Week Micro-CT Scientific Evidence" 
+                         class="tech-image"
+                         onclick="showSource('microct')"
+                         onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="placeholder-image" onclick="showSource('microct')">
                         <div class="placeholder-icon">🔬</div>
                         <div class="placeholder-text">Micro-CT Evidence</div>
@@ -576,6 +581,11 @@
                 </div>
                 
                 <div class="image-container">
+                    <img src="/kiis-investor-pitch/public/images/reference-korean-patent-microct-comparison.png" 
+                         alt="KiiS Patent Structure Technology" 
+                         class="tech-image"
+                         onclick="showSource('paradigmshift')"
+                         onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="placeholder-image" onclick="showSource('paradigmshift')">
                         <div class="placeholder-icon">⚡</div>
                         <div class="placeholder-text">Technology Breakthrough</div>
