--- a/slide5.html
+++ b/slide5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>KiiS - Science Behind the Innovation</title>
+    <title>KiiS - Clinical Evidence Drives Market Success</title>
     <style>
         * {
             margin: 0;
@@ -647,8 +647,8 @@
         <!-- 메인 헤더 -->
         <div class="main-header" id="mainHeader">
             <h1 class="title">
-                <span class="title-highlight">Science Behind</span><br>
-                the Innovation
+                <span class="title-highlight">Clinical Evidence</span><br>
+                Drives Market Success
             </h1>
             <p class="subtitle">
                 Clinical evidence and breakthrough technology that transforms impossible into inevitable
@@ -746,7 +746,7 @@
     <!-- 네비게이션 -->
     <div class="hover-zone" id="hoverZone"></div>
     <div class="navigation" id="navigation">
-        <a href="slide3.html" class="nav-btn prev">Back</a>
+        <a href="slide4.html" class="nav-btn prev">Back</a>
         <a href="slide6.html" class="nav-btn next">Next</a>
     </div>
     
@@ -884,7 +884,7 @@
                 case 'ArrowLeft':
                 case 'ArrowUp':
                     e.preventDefault();
-                    window.location.href = 'slide3.html';
+                    window.location.href = 'slide4.html';
                     break;
                 case 'ArrowRight':
                 case 'ArrowDown':
@@ -986,7 +986,7 @@
                     Math.abs(deltaX) > Math.abs(deltaY)) {
                     
                     if (deltaX > 0) {
-                        window.location.href = 'slide3.html';
+                        window.location.href = 'slide4.html';
                     } else {
                         window.location.href = 'slide6.html';
                     }
